<resources>
    <string name="app_name">PracaDomowaNr2</string>
    <string name="shopping_list_button">Lista zakupów</string>
    <string name="add_product_title">Dodaj produkt</string>
    <string name="add_product_button">Dodaj!</string>
    <string name="product_name">Nazwa</string>
    <string name="price">Cena</string>
    <string name="quantity">Ilość</string>
    <string name="unit">Jednostka</string>
    <string name="name_hint">Nazwa produktu</string>
    <string name="price_hint">Cena w PLN</string>
    <string name="quantity_hint">Ilość</string>
    <string name="product_list_label">Lista produktów</string>
    <string name="currency">PLN</string>
    <string name="manage_product_button">Zarządzaj</string>
    <string name="product_details_label">Szczegóły produktu</string>
    <string name="already_bought">Kupione</string>
    <string name="update_product_details">Aktualizuj!</string>



    <string-array name="measurement_units">
        <item>g</item>
        <item>kg</item>
        <item>szt.</item>
        <item>ml</item>
        <item>l</item>
    </string-array>
</resources>