<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="5dp"
    card_view:cardElevation="2dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/product_name_text"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.515"
            card_view:layout_constraintStart_toEndOf="@+id/textView2"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_price_text"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="96dp"
            card_view:layout_constraintBottom_toTopOf="@+id/product_quantity_text"
            card_view:layout_constraintEnd_toStartOf="@+id/textView6"
            card_view:layout_constraintTop_toBottomOf="@+id/product_name_text" />

        <TextView
            android:id="@+id/product_quantity_text"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/product_unit_text"
            card_view:layout_constraintStart_toEndOf="@+id/textView7"
            card_view:layout_constraintTop_toBottomOf="@+id/product_price_text" />

        <TextView
            android:id="@+id/product_unit_text"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/product_price_text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            card_view:layout_constraintBottom_toTopOf="@+id/product_price_text"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            card_view:layout_constraintBottom_toTopOf="@+id/textView7"
            card_view:layout_constraintEnd_toStartOf="@+id/product_price_text"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:text="@string/currency"
            card_view:layout_constraintBottom_toTopOf="@+id/product_unit_text"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/product_name_text"
            card_view:layout_constraintVertical_bias="0.494" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>